# sharebin

./: .dockerignore  .env  .env.template  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  compose.yaml  docker-setup.sh  render.yaml
.github/workflows/: docker.yml
src/: args.rs  main.rs  pasta.rs
src/endpoints/: admin.rs
src/util/: telemetry.rs  version.rs
templates/: admin.html  footer.html  guide.html  header.html
