[package]
name = "sharebin"
version = "2.0.4"
edition = "2021"
authors = ["Timshel"]
license = "BSD-3-Clause"
description = "Simple, performant, configurable, entirely self-contained Pastebin and URL shortener."
readme = "README.md"
homepage = "https://github.com/timshel/sharebin"
repository = "https://github.com/timshel/sharebin"
keywords = ["pastebin", "filesharing", "sharebin", "actix", "selfhosted"]
categories = ["pastebins"]

[dependencies]
actix-files = "0.6.0"
actix-multipart = "0.4.0"
actix-web = "4"
actix-web-httpauth = "0.6.0"
askama = "0.10"
askama-filters = { version = "0.1.3", features = ["chrono"] }
bytesize = { version = "1.1", features = ["serde"] }
chrono = "0.4.19"
clap = { version = "3.1.12", features = ["derive", "env"] }
dotenvy = { version = "0.15.7", default-features = false }
env_logger = "0.9.0"
futures = "0.3"
harsh = "0.2"
html-escape = "0.2.13"
lazy_static = "1.4.0"
linkify = "0.8.1"
log = "0.4"
magic-crypt = "3.1.12"
mime_guess = "2.0.4"
once_cell = "1.19.0"
qrcode-generator = "4.1.6"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json", "blocking"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
rust-embed = "6.4.2"
sanitize-filename = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.80"
syntect = "5.0"

[dependencies.openssl]
version = "0.10.51"
features = ["vendored"]

[profile.release]
lto = true
strip = true
